--- a/css/custom.css
+++ b/css/custom.css
@@ -1,12 +1,14 @@
+/* 定义动画关键帧 */
 @keyframes shake {
-    0% { transform: translate(0, 0); }
-    10%, 90% { transform: translate(-10px, 0); }
-    30%, 70% { transform: translate(10px, 0); }
-    50% { transform: translate(0, -10px); }
-    60% { transform: translate(0, -5px); }
-    80% { transform: translate(0, 5px); }
-  }
+  0% { transform: translate(0, 0); }
+  10%, 90% { transform: translate(-10px, 0); }
+  30%, 70% { transform: translate(10px, 0); }
+  50% { transform: translate(0, -10px); }
+  60% { transform: translate(0, -5px); }
+  80% { transform: translate(0, 5px); }
+}
 
-  .e_img {
-    animation: shake 5s ease-in-out infinite;
-  }
+/* 应用动画样式 */
+.e_img {
+  animation: shake 1s ease-in-out infinite;
+}
