--- a/pomoClock.css
+++ b/pomoClock.css
@@ -71,3 +71,11 @@ h1{
     /* background-color: #3f2b36; */
     z-index: -1;
 }
+
+p {
+    text-align: left;
+    margin-left: 50px;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #333;
+  }
