--- a/pomoClock.css
+++ b/pomoClock.css
@@ -16,6 +16,21 @@ h1{
     font-family: 'Sedgwick Ave Display', cursive;
 }
 
+button#clear-tomatoes {
+    font-size: 14px;
+    color: #ffffff;
+    background-color: #ff8ba7;
+    border: none;
+    border-radius: 3px;
+    padding: 6px 10px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+button#clear-tomatoes:hover {
+    background-color: #ff6a89;
+}
+
 .container{
     margin-top: 5%;
     position: relative;
